Setting the base templates

--- a/templates/integration/index.html
+++ b/templates/integration/index.html
@@ -1,12 +1,7 @@
+{% extends "integration/layout/base.html" %}
+{% block content %}
+    <h1>This is the index page of CEIT Xibo</h1>
+    <h4>{{ time }}</h4>
+    <a href="/sync">Link</a>
+{% endblock %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CEIT Xibo</title>
-</head>
-<body>
-<h1>This is the index page of CEIT Xibo</h1>
-<h4>{{ time }}</h4>
-<a href="/sync">Link</a>
-</body>
-</html>
