--- a/templates/integration/index.html
+++ b/templates/integration/index.html
@@ -1,7 +1,10 @@
 {% extends "integration/layout/base.html" %}
 {% block content %}
+    <div class="page-header">
+
+    <h1><a href="/">CEIT Sinage</a></h1>
+    </div>
     <h1>This is the index page of CEIT Xibo</h1>
     <h4>{{ time }}</h4>
     <a href="/sync">Link</a>
 {% endblock %}
-<!DOCTYPE html>
