--- a/templates/integration/layout/base.html
+++ b/templates/integration/layout/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">CEIT Sinage</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,20 +52,35 @@
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        User
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        {% if user %}
+                            <a class="dropdown-item" href="{% url "user.login" %}">{{ user.name }}</a>
+                        {% else %}
+                            <a class="dropdown-item" href="{% url "user.login" %}">Login</a>
+                        {% endif %}
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
+{#            <form class="form-inline my-3 my-lg-0">#}
+{#                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
+{#                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
+{#            </form>#}
         </div>
     </nav>
 </header>
-<div class="page-header">
 
-    <h1><a href="/">CEIT Sinage</a></h1>
-</div>
 <div class="content container">
-    <div class="row">
-        <div class="col-md-8">
+    <div class="row" style="margin-top: 10px;">
+        <div class="col-md-12">
             {% block content %}
             {% endblock %}
         </div>
