--- a/templates/integration/layout/base.html
+++ b/templates/integration/layout/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">CEIT Sinage</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,13 +39,13 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                        Tasks
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="{% url "task.new" %}">New Schedule</a>
+{#                        <a class="dropdown-item" href="#">Another action</a>#}
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">New Schedule</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -79,7 +79,7 @@
 </header>
 
 <div class="content container">
-    <div class="row" style="margin-top: 10px;">
+    <div class="row" style="margin-top: 80px;">
         <div class="col-md-12">
             {% block content %}
             {% endblock %}
