--- a/templates/integration/task/schedule.html
+++ b/templates/integration/task/schedule.html
@@ -11,17 +11,16 @@
                     <input name="widget-id" type="text" class="form-control" id="widget-id">
                 </div>
                 <div class="form-group">
-                    <label for="pwd">Datetime:</label>
-                    <input name="datetime" type="text" class="form-control" id="pwd">
+                    <label for="pwd">Hour:</label>
+                    <input name="hour" type="text" class="form-control" id="text">
+                </div>
+                <div class="form-group">
+                    <label for="minute">Minute:</label>
+                    <input name="minute" type="text" class="form-control" id="minute">
                 </div>
                 <div class="form-group">
                     <label for="pwd">Text:</label>
                     <input name="text" type="text" class="form-control" id="text">
-                </div>
-                <div class="form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="checkbox"> Remember me
-                    </label>
                 </div>
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary">Submit</button>
