Adding active on navbar based on page content

--- a/templates/integration/index.html
+++ b/templates/integration/index.html
@@ -1,4 +1,5 @@
 {% extends "integration/layout/base.html" %}
+    {% block home_nav_activate %}active{% endblock %}
 {% block content %}
     <p>
         Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
