--- a/templates/integration/xibo/index.html
+++ b/templates/integration/xibo/index.html
@@ -1,4 +1,5 @@
 {% extends "integration/layout/base.html" %}
+{% block xibo_nav_activate %}active{% endblock %}
 {% block pagetitle %}Xibo{% endblock %}
 {% block content %}
     <div class="ml-auto mr-auto" style="width: 500px;">
