Change default nav bar

--- a/templates/integration/layout/base.html
+++ b/templates/integration/layout/base.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">CEIT Signage</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,6 +47,17 @@
                         <a class="dropdown-item" href="{% url "task.new" %}">New Immediate Schedule</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url "timesheet.selectdisplay" %}">Set Time Sheet Schedule</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/class/table">Set Time Sheet Schedule</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown {% block admin_nav_activate %}{% endblock %}">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url "timeslice.class" %}">Class Time Slice</a>
                     </div>
                 </li>
             </ul>
@@ -68,10 +79,10 @@
                     </div>
                 </li>
             </ul>
-{#            <form class="form-inline my-3 my-lg-0">#}
-{#                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
-{#                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
-{#            </form>#}
+            {#            <form class="form-inline my-3 my-lg-0">#}
+            {#                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
+            {#                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
+            {#            </form>#}
         </div>
     </nav>
 </header>
