Adding link to classroom index page

--- a/templates/integration/layout/base.html
+++ b/templates/integration/layout/base.html
@@ -38,6 +38,9 @@
                 <li class="nav-item {% block xibo_nav_activate %}{% endblock %}">
                     <a class="nav-link" href="{% url "xibo.index" %}">Xibo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "classroom.index" %}">Classroom</a>
+                </li>
                 <li class="nav-item dropdown {% block task_nav_activate %}{% endblock %}">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
