--- a/templates/integration/class/index.html
+++ b/templates/integration/class/index.html
@@ -6,17 +6,59 @@
             <th>ID</th>
             <th>Classroom Name</th>
             <th>Display ID</th>
+            <th>Teacher Name Layout</th>
+            <th>Subject Name Layout</th>
             <th>Routine program</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            {% for class_room in class_rooms %}
+        {% for class_room in class_rooms %}
+            <tr>
                 <td>{{ class_room.id }}</td>
                 <td>{{ class_room.name }}</td>
                 <td>{{ class_room.display_id }}</td>
-                <td><a href="/classroom/{{ class_room.id }}"><button>Schedule</button></a></td>
-            {% endfor %}
+                <td>{{ class_room.teacher_name_widget.widget_id }}</td>
+                <td>{{ class_room.subject_name_widget.widget_id }}</td>
+                <td>
+                    <a href="{% url 'classroom.class_id' class_room.id %}">
+                        <button>Schedule</button>
+                    </a>
+                </td>
+            </tr>
+        {% endfor %}
+        <tr>
+            <form method="post" action="{% url 'classroom.index' %}">
+                {% csrf_token %}
+                <td></td>
+                <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="classroom-name"
+                           name="classroom-name"
+                           placeholder="Classroom name"></td>
+                <td>
+                    <select class="form-control" name="display-id">
+                        {% for display in displays %}
+                            <option value="{{ display.display_id }}">{{ display.display_id }}</option>
+                        {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select class="form-control" name="teacher-name-widget">
+                        {% for teacher_name_widget in teacher_name_widgets %}
+                            <option value="{{ teacher_name_widget.widget_id }}">{{ teacher_name_widget.widget_id }}</option>
+                        {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <select class="form-control" name="subject-name-widget">
+                        {% for subject_name_widget in subject_name_widgets %}
+                            <option value="{{ subject_name_widget.widget_id }}">{{ subject_name_widget.widget_id }}</option>
+                        {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <button type="submit" class="btn btn-primary btn-md">Large button</button>
+                </td>
+            </form>
+
         </tr>
 
         </tbody>
