--- a/templates/integration/class/table.html
+++ b/templates/integration/class/table.html
@@ -17,7 +17,7 @@
                     <td>{{ schedule.teacher_name }}</td>
                     <td>{{ schedule.subject_name }}</td>
                     <td>{{ schedule.start_time_hour }} : {{ schedule.start_time_min }}</td>
-                    <td>{{ schedule.week_day }}</td>
+                    <td>{{ schedule.get_week_day_name }}</td>
                     <td>
                         <button type="button" class="btn btn-danger">Delete</button>
                     </td>
