Changing the row and changing the button text

--- a/templates/integration/class/table.html
+++ b/templates/integration/class/table.html
@@ -4,8 +4,8 @@
         <table class="table">
             <thead>
             <tr>
-                <th>نام درس</th>
                 <th>نام استاد</th>
+                <th>نام درس</th>
                 <th>زمان</th>
                 <th>روز هفته</th>
                 <th></th>
@@ -25,15 +25,17 @@
             {% endfor %}
             <tr>
                 {% csrf_token %}
-                <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="subject-name" name="subject-name"
-                           placeholder="نام درس"></td>
                 <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="teacher-name" name="teacher-name"
                            placeholder="نام استاد"></td>
+                <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="subject-name" name="subject-name"
+                           placeholder="نام درس"></td>
                 <td>
                     <div class="form-inline">
-                        <input type="text" class="form-control mb-2" name="start-time-hour" id="start-time-hour">
-                        <input type="text" class="form-control mb-2" name="start-time-min" id="start-time-min"
-                               value="">
+                        <p>
+                            <input type="text" class="form-control mb-2" name="start-time-hour" id="start-time-hour">
+                            <input type="text" class="form-control mb-2" name="start-time-min" id="start-time-min"
+                                   value="">
+                        </p>
                     </div>
                 </td>
                 <td>
@@ -46,7 +48,7 @@
             </tr>
             </tbody>
         </table>
-        <button type="submit" class="btn btn-primary btn-lg">Large button</button>
+        <button type="submit" class="btn btn-primary btn-lg">Add Schedule</button>
     </form>
 
 {% endblock %}
