--- a/templates/integration/class/index.html
+++ b/templates/integration/class/index.html
@@ -55,7 +55,7 @@
                     </select>
                 </td>
                 <td>
-                    <button type="submit" class="btn btn-primary btn-md">Large button</button>
+                    <button type="submit" class="btn btn-primary btn-md">Add</button>
                 </td>
             </form>
 
