--- a/templates/integration/xibo/index.html
+++ b/templates/integration/xibo/index.html
@@ -44,8 +44,8 @@
             {% for display in displays %}
                 <div class="row1 my-2">
                     <div class="card">
-                        <div class="card-header">Header</div>
-                        <div class="card-body">Content</div>
+                        <div class="card-header">{{ display.display }}</div>
+                        <div class="card-body">Display Address : {{ display.client_address }}</div>
                         {#        <div class="card-footer">Footer</div>#}
                     </div>
                 </div>
