--- a/templates/integration/class/index.html
+++ b/templates/integration/class/index.html
@@ -17,8 +17,8 @@
                 <td>{{ class_room.id }}</td>
                 <td>{{ class_room.name }}</td>
                 <td>{{ class_room.display_id }}</td>
-                <td>{{ class_room.teacher_name_widget.widget_id }}</td>
-                <td>{{ class_room.subject_name_widget.widget_id }}</td>
+                <td>{{ class_room.teacher_name_widget.widget_id }} {{ class_room.teacher_name_widget.name }}</td>
+                <td>{{ class_room.subject_name_widget.widget_id }} {{ class_room.subject_name_widget.name }}</td>
                 <td>
                     <a href="{% url 'classroom.class_id' class_room.id %}">
                         <button>Schedule</button>
@@ -36,21 +36,21 @@
                 <td>
                     <select class="form-control" name="display-id">
                         {% for display in displays %}
-                            <option value="{{ display.display_id }}">{{ display.display_id }}</option>
+                            <option value="{{ display.display_id }}">{{ display.display_id }} {{ display.display }}</option>
                         {% endfor %}
                     </select>
                 </td>
                 <td>
                     <select class="form-control" name="teacher-name-widget">
                         {% for teacher_name_widget in teacher_name_widgets %}
-                            <option value="{{ teacher_name_widget.widget_id }}">{{ teacher_name_widget.widget_id }}</option>
+                            <option value="{{ teacher_name_widget.widget_id }}">{{ teacher_name_widget.widget_id }} - {{ teacher_name_widget.name }}({{ teacher_name_widget.type }})</option>
                         {% endfor %}
                     </select>
                 </td>
                 <td>
                     <select class="form-control" name="subject-name-widget">
                         {% for subject_name_widget in subject_name_widgets %}
-                            <option value="{{ subject_name_widget.widget_id }}">{{ subject_name_widget.widget_id }}</option>
+                            <option value="{{ subject_name_widget.widget_id }}">{{ subject_name_widget.widget_id }} - {{ subject_name_widget.name }}({{ subject_name_widget.type }})</option>
                         {% endfor %}
                     </select>
                 </td>
