--- a/templates/integration/class/table.html
+++ b/templates/integration/class/table.html
@@ -1,13 +1,21 @@
 {% extends "integration/layout/base.html" %}
+{% block pagetitle %}
+    {{ class_room.name }}
+{% endblock %}
 {% block content %}
+
+    <div style="direction: rtl; text-align: right;">
+        <h1>{{ class_room.name }}</h1>
+    </div>
     <form method="post" action="{% url 'classroom.class_id' class_room.id %}">
-        <table class="table">
+        <table style="direction: rtl; text-align: right;" class="table">
             <thead>
             <tr>
                 <th>نام استاد</th>
                 <th>نام درس</th>
                 <th>زمان</th>
                 <th>روز هفته</th>
+                <th></th>
                 <th></th>
             </tr>
             </thead>
@@ -16,8 +24,11 @@
                 <tr>
                     <td>{{ schedule.teacher_name }}</td>
                     <td>{{ schedule.subject_name }}</td>
-                    <td>{{ schedule.start_time_hour }} : {{ schedule.start_time_min }}</td>
+                    <td style="direction: ltr;">{{ schedule.start_time_hour }} : {{ schedule.start_time_min }}</td>
                     <td>{{ schedule.get_week_day_name }}</td>
+                    <td>
+                        <button type="button" class="btn btn-warning">Edit</button>
+                    </td>
                     <td>
                         <button type="button" class="btn btn-danger">Delete</button>
                     </td>
@@ -30,13 +41,14 @@
                 <td><input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="subject-name" name="subject-name"
                            placeholder="نام درس"></td>
                 <td>
-                    <div class="form-inline">
-                        <p>
-                            <input type="text" class="form-control mb-2" name="start-time-hour" id="start-time-hour">
-                            <input type="text" class="form-control mb-2" name="start-time-min" id="start-time-min"
-                                   value="">
-                        </p>
-                    </div>
+                    <input type="text" class="form-control mb-2" name="start-time" id="start-time-hour">
+{#                    <div class="form-inline">#}
+{#                        <p>#}
+{#                            <input type="text" class="form-control mb-2" name="start-time-hour" id="start-time-hour">#}
+{#                            <input type="text" class="form-control mb-2" name="start-time-min" id="start-time-min"#}
+{#                                   value="">#}
+{#                        </p>#}
+{#                    </div>#}
                 </td>
                 <td>
                     <select class="form-control" id="week-day-select" name="week-day">
